# report_generation

./: .gitignore  Dockerfile  README.md  __init__.py  daily_report_env_README.md  hf_mini_blog.md  inference.py  models.py  openenv.yaml  pyproject.toml  report_tracking.db
daily_report_env/: client.py  pyproject.toml
daily_report_env/openenv_daily_report_env.egg-info/: SOURCES.txt  requires.txt  top_level.txt
daily_report_env/server/: __init__.py  app.py
daily_report_env/server/frontend/: index.html
hackathon/: baseline_policy_rewards.csv  grpo_pre_post_eval.csv  grpo_train_logs.csv  metrics_logger.py  pitch_and_demo_script.md  problem_statement_round2.md  reward_function_spec.md  round2_environment_skeleton.py  train_colab.ipynb
openenv_daily_report_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
server/: Dockerfile  agent_tools.py  app.py  daily_report_environment.py  database.py  execution_agent.py  query_agent.py  report_agent.py  report_builder.py  scheduler_agents.py
server/frontend/: index.html
tests/: test_agent_tools.py  test_daily_report_environment.py  test_database.py  test_execution_agent.py  test_scheduler_agents.py
