[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-daily-report-env"
version = "1.0.0"
description = "OpenEnv daily 07:00 MRG PDF report assembly from static ETL extracts"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "daily_report_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["daily_report_env", "daily_report_env.server"]
package-dir = { "daily_report_env" = ".", "daily_report_env.server" = "server" }
